updated javascript file

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -485,7 +485,7 @@
     width: var(--size-150);
     position: absolute;
     top: var(--size-100);
-    left: -var(--size-30);
+    left: -1.5625rem;
     z-index: -1;
   }
   .hubspot_wrapper .hubspot_text {
